# ScopyBio

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeSettings.json  README.txt  Readme.md  ScopyBio  conanfile.txt  conaninfo.txt  data_view.cpp  data_view.h  definition.h  image_view.cpp  image_view.h  main.cpp  menu_draw_button.cpp  menu_draw_button.h
CMakeModule/: FindFilesystem.cmake
Controler/: CMakeLists.txt  menu_option.cpp  mouselistener.cpp  mouselistener.h  scopybio_controller.cpp  scopybio_controller.cpp.autosave  scopybio_controller.h
Data/: analyse.tiff
Model/: CMakeLists.txt  analyse_model.cpp  analyse_model.h  analysis_popup.h  annotation_pile_model.cpp  annotation_pile_model.h  annotation_user.cpp  annotation_user.h  annotation_user_memento.cpp  annotation_user_memento.h  calque.cpp  calque.h  calque.h.autosave  command_memento.cpp  command_memento.h  coordonnee.cpp  coordonnee.h  data_model.cpp  data_model.h  dessin_model.cpp  dessin_model.h  faisceau_model.cpp  faisceau_model.h  faisceau_model.h.autosave  gestionnaire_calques_model.cpp  gestionnaire_calques_model.h  gestionnaire_calques_model.h.autosave  image_model.cpp  image_model.h  load_model.cpp  load_model.h  pile_model.cpp  pile_model.cpp.autosave  pile_model.h  pile_model.h.autosave  resultat.cpp  resultat.h  save_model.cpp  save_model.h
Resources/Config/: config.json
View/: CMakeLists.txt  analysis_popup.cpp  analysis_popup.h  compare_popup.cpp  compare_popup.h  compare_view.cpp  compare_view.h  data_view.cpp  data_view.cpp.autosave  data_view.h  image_view.cpp  image_view.h  image_view.h.autosave  layer_view.cpp  layer_view.h  loop_view.cpp  loop_view.h  mainwindow.cpp  mainwindow.h  menu_draw_button.cpp  menu_draw_button.h  menu_option.cpp  menu_option.h  pile_view.cpp  pile_view.h  zoom_view.cpp  zoom_view.h
